# stv_fuzzer

./: .gitignore  .pre-commit-config.yaml  README.md  compile_grammars.sh  pyproject.toml  requirements.txt
benchmarks/python_afl/: README.md  aggregate_results.py  parse_plot_data.py  run_benchmark.py
final_runs/Json1_20260417/: results.db
final_runs/Json2_20260417/: results.db
final_runs/Json3_20260417/: results.db
final_runs/cidrize4_1_20260417/: results.db
final_runs/cidrize4_2_20260417/: results.db
final_runs/cidrize4_3_20260418/: results.db
final_runs/cidrize6_1_20260418/: results.db
final_runs/cidrize6_2_20260418/: results.db
final_runs/cidrize6_3_20260418/: results.db
final_runs/ipyparse4_1_20260417/: results.db  results.db.bak  results.db.timeseries_fix.bak
final_runs/ipyparse4_2_20260417/: results.db  results.db.bak  (+1 more)
src/fuzzer/: cli.py  (+7 more)
tools/: fuzz_cidrize_ipv4_python_afl.py  fuzz_cidrize_ipv6_python_afl.py  fuzz_ipv4_python_afl.py  fuzz_ipv6_python_afl.py  fuzz_json_python_afl.py  run_experiment_matrix.py  run_single_coverage.py  smoke_alternative_switch.py  smoke_bug_category.py  smoke_corpus_dedup.py  smoke_crash_dedup.py  smoke_differential_executor.py  smoke_differential_observer.py  smoke_fragments.py  smoke_grammar_generator.py  smoke_grammar_loader.py  smoke_grammar_mutator.py  smoke_grammar_parser.py  smoke_grammar_strategy.py  smoke_round_robin_outputs.py  smoke_round_robin_outputs.txt  smoke_serializer.py  smoke_subtree_edits.py  smoke_terminal_mutation.py  summarize_json_atheris_artifacts.py  summarize_python_afl_artifacts.py
(+163 files in other folders)
