[project]
name = "stv-fuzzer"
version = "0.1.0"
description = "Fuzzer project for 50.053 Software Testing and Verification"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "coverage>=7.13.4",
    "rich>=14.3.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.2",
]

[tool.uv.workspace]
members = ["."]
exclude = ["targets/*"]